2010-12-28  Ben Abbott <bpabbott@mac.com>

	* plot/private/__plt__.m: Fix to allow inline legend keys. Bug 31991.

2010-12-28  Rik  <octave@nomad.inbox5.com>

	* image/autumn.m, image/bone.m, image/cool.m, image/copper.m, 
	image/flag.m, image/gray.m, image/hot.m, image/hsv.m, image/jet.m,
	image/ocean.m, image/pink.m, image/prism.m, image/rainbow.m,
	image/spring.m, image/summer.m, image/white.m, image/winter.m: Use
	same variable name for documentation and function call.  Change demo
	code to explicitly use colormap size.  Update docstring.

	* image/gmap40.m: Use same variable name for documentation and function
	call.  Change demo code to use colormap size of 6 rather than 64.
	Update docstring.

2010-12-28  Ben Abbott <bpabbott@mac.com>

	* plot/legend.m: Add demo to legend for inline key.

2010-12-27  Ben Abbott  <bpabbott@mac.com>

	* plot/text.m: Add demo for text rotation and alignment.

2010-12-26  Michael Godfrey <godfrey@isl.stanford.edu>

	* specfun/legendre.m: Add @tex blocks to docstring.

2010-12-24  Rik  <octave@nomad.inbox5.com>

	* testfun/test.m: Use 'Command' for deftype in docstring.

2010-12-24  Rik  <octave@nomad.inbox5.com>

	* audio/setaudio.m: Re-write docstring.

2010-12-23  Soren Hauberg  <hauberg@gmail.com>
	* signal/detrend.m: Also accept polynomial order as a string ("constant" or
	"linear") for compatibility with Matlab.

2010-12-22  Konstantinos Poulios  <logari81@gmail.com>

	* plot/private/__axis_label__.m: Trigger fltk graphics redraw immediately
	after setting an axis label.

2010-12-22  John W. Eaton  <jwe@octave.org>

	* optimization/optimset.m, optimization/optimget.m,
	optimization/__all_opts__.m: Consistently use lower case for
	storing and searching option names.

2010-12-22  John W. Eaton  <jwe@octave.org>

	* statistics/base/skewness.m: Make returned value have the same
	class as the input.

2010-12-21  John W. Eaton  <jwe@octave.org>

	* time/datevec.m: Style fixes.

2010-12-20  Ben Abbott <bpabbott@mac.com>
