@@ -1,3 +1,8 @@
+2010-12-29  Ben Abbott  <bpabbott@mac.com>
+
+	* plot/__go_draw_axes__.m: Enable vertical alignment of text objects for
+	gnuplot.
+
 2010-12-28  Ben Abbott <bpabbott@mac.com>
 
 	* plot/private/__plt__.m: Fix to allow inline legend keys. Bug 31991.
